chore: add git commit message linter setup

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.29.4",
+    "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "prettier-config-standard": "^5.0.0"
