--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.12.0",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "validator": "^13.7.0",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.24",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
