--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.0",
     "react-spinners": "^0.12.0",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "validator": "^13.7.0",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.24",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
