chore: disable eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "react/react-in-jsx-scope": "off",
     "no-use-before-define": "off",
     "space-before-function-paren": "off",
-    "multiline-ternary": "off"
+    "multiline-ternary": "off",
+    "prefer-promise-reject-errors": "off"
   }
 }
